# bubu_injector

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.claude/: settings.local.json
byovd/: CMakeLists.txt
byovd/include/: DriverLoader.h  KernelRead.h
byovd/src/: DriverLoader.cpp  KernelRead.cpp  main.cpp
driver/: CMakeLists.txt  sign_driver.ps1
driver/include/: EniDrvShared.h
driver/src/: EniDrv.c
include/: pch.h
include/Core/: Config.h  Globals.h
include/Executor/: LuaContext.h  ScriptEngine.h
include/Hooking/: HookManager.h  Hooks.h
include/Memory/: MemoryManager.h  PatternScanner.h
include/ScriptHub/: ScriptHub.h
include/UI/: ESP.h  ImGuiRenderer.h  Menu.h  ScriptEditor.h
include/Utils/: Utils.h
injector/: CMakeLists.txt
injector/include/: ManualMapper.h
injector/src/: ManualMapper.cpp  main.cpp
launcher/: CMakeLists.txt
launcher/src/: ShimMapper.cpp  ShimMapper.h  main.cpp
payload/: CMakeLists.txt
payload/dumper/: CMakeLists.txt
payload/dumper/src/: DumperEntry.cpp  Pagewise.cpp  Pagewise.h
payload/include/Executor/: LuaPipeline.h
payload/include/Hyperion/: Boot.h  HookEngine.h  InputPipe.h  Log.h  NtApi.h  PayloadRegion.h  Sentry.h  SigScan.h  Signatures.h  TaskScheduler.h
payload/src/: Boot.cpp  HookEngine.cpp  InputPipe.cpp  Log.cpp  LuaPipeline.cpp  NtApi.cpp  PayloadRegion.cpp  Sentry.cpp  SigScan.cpp  Signatures.cpp  TaskScheduler.cpp
proxy/: CMakeLists.txt
proxy/src/: ProxyEntry.cpp  Stubs.cpp  WebView2Forwarders.cpp  WebView2Stub.cpp  exports.def
shared/: BootInfo.h  PayloadCrypt.h  PayloadKey.h  ShimContract.h
shim/: CMakeLists.txt
shim/include/: ShimStatus.h
shim/src/: InlineHook.h  ShimMain.cpp
src/: main.cpp
src/Core/: Config.cpp  Globals.cpp
src/Executor/: LuaContext.cpp  ScriptEngine.cpp
src/Hooking/: HookManager.cpp  Hooks.cpp
src/Memory/: MemoryManager.cpp  PatternScanner.cpp
src/ScriptHub/: ScriptHub.cpp
src/UI/: ESP.cpp  ImGuiRenderer.cpp  Menu.cpp  ScriptEditor.cpp
src/Utils/: Utils.cpp
tools/: encrypt_payload.py
