# =============================================================================
# ENIPayload - the in-process payload DLL
# =============================================================================
#
# Built fresh under payload/, parallel to the legacy src/-based RobloxExecutor
# target. The legacy code stays in place untouched until we deliberately port
# it; this target is what the launcher's --payload flag actually consumes
# (via bin/payload.bin).
#
# Single export: ENIBootEntry. Single dependency: MinHook (header-only-ish;
# linked when the deps/MinHook subproject was added by the top-level CMake).
# Static CRT.
# =============================================================================

set(PAYLOAD_SOURCES
    src/Boot.cpp
    src/Sentry.cpp
    src/NtApi.cpp
    src/HookEngine.cpp
    src/PayloadRegion.cpp
    src/Log.cpp
    src/SigScan.cpp
    src/Signatures.cpp
    src/TaskScheduler.cpp
    src/InputPipe.cpp
    src/LuaPipeline.cpp
)

set(PAYLOAD_HEADERS
    include/Hyperion/Boot.h
    include/Hyperion/Sentry.h
    include/Hyperion/NtApi.h
    include/Hyperion/HookEngine.h
    include/Hyperion/PayloadRegion.h
    include/Hyperion/Log.h
    include/Hyperion/SigScan.h
    include/Hyperion/Signatures.h
    include/Hyperion/TaskScheduler.h
    include/Hyperion/InputPipe.h
    include/Executor/LuaPipeline.h
    ../shared/BootInfo.h
)

add_library(ENIPayload SHARED ${PAYLOAD_SOURCES} ${PAYLOAD_HEADERS})

target_include_directories(ENIPayload PRIVATE
    include
    ../shared
    ../deps/MinHook/include
    ../deps/MinHook/MinHook-src/include
)

target_compile_features(ENIPayload PRIVATE cxx_std_23)

if(MSVC)
    set_property(TARGET ENIPayload PROPERTY
        MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

    target_compile_options(ENIPayload PRIVATE
        /W4 /permissive- /utf-8 /EHsc /MP
        /GS-                # disable stack canary (we don't have full CRT)
        /wd4100             # unreferenced formal parameter
        /wd4505             # unreferenced local function
        /wd4324             # struct-padding warning from PEB types
    )

    # Limit exports to ENIBootEntry so dumpbin/strings shows nothing else.
    target_link_options(ENIPayload PRIVATE
        /DEBUG:FULL
        /EXPORT:ENIBootEntry
    )
endif()

target_link_libraries(ENIPayload PRIVATE
    kernel32
    user32
    advapi32
)

if(TARGET MinHook)
    target_link_libraries(ENIPayload PRIVATE MinHook)
endif()

set_target_properties(ENIPayload PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
    OUTPUT_NAME "ENIPayload"
)

# Encrypt the freshly built ENIPayload.dll into bin/payload.bin. The shim
# decrypts at hook time using the matching key in shared/PayloadKey.h
# (auto-generated by the script on first build, then reused). This means:
#
#   * payload.bin on disk is opaque ChaCha20 ciphertext - no signatures,
#     no strings, no PE structure visible to a casual analyst.
#   * The shim and the encrypted payload are linked by the per-build key;
#     mixing a fresh shim with a stale payload (or vice versa) fails at
#     decrypt-time PE validation.
#   * Incremental builds reuse the existing key (no shim rebuild churn).
#     Pass --regen-key to force a fresh key.
#
# We skip this step if Python isn't on PATH - dev workflows that don't
# have python3 available (uncommon but possible on stripped Windows
# images) get the verbatim copy fallback so injection still works.
find_program(PYTHON_EXECUTABLE NAMES python3 python)

if(PYTHON_EXECUTABLE)
    add_custom_command(TARGET ENIPayload POST_BUILD
        COMMAND ${PYTHON_EXECUTABLE}
            ${CMAKE_SOURCE_DIR}/tools/encrypt_payload.py
            --in         $<TARGET_FILE:ENIPayload>
            --out        ${CMAKE_SOURCE_DIR}/bin/payload.bin
            --key-header ${CMAKE_SOURCE_DIR}/shared/PayloadKey.h
        COMMENT "Encrypting ENIPayload.dll -> bin/payload.bin (ChaCha20)"
        VERBATIM
    )
else()
    message(WARNING "python not found; falling back to verbatim payload copy. "
                    "Install Python or add to PATH for at-rest encryption.")
    add_custom_command(TARGET ENIPayload POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:ENIPayload>
            ${CMAKE_SOURCE_DIR}/bin/payload.bin
    )
endif()
